--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,6 @@
 <%- include ('partials/header.ejs') %>
 <body>
-<%- include ('partials/navbar.ejs') %>
+<%- include ('partials/homenavbar.ejs') %>
     <div class="container mt-4">
         <div class="card">
             <h1>Welcome to my home page</h1>
