--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,11 +1,25 @@
 <%- include ('partials/header.ejs') %>
 <body>
 <%- include ('partials/homenavbar.ejs') %>
+    <div class="container-xxl mt-4">
+        <h1 class="fst-italic">Welcome to home page</h1>
+    </div>
+    
     <div class="container mt-4">
-        <div class="card">
-            <h1>Welcome to my home page</h1>
-            <p>Página carregada</p>
-        </div>
+        <h2 class="mb-3">Artigos</h2>
+        <% articles.forEach( (article) =>{%>
+            <div class="card mb-2">
+                <div class="card-header">
+                    <h3 class=" d-flex justify-content-between align-items-center"><%= article.title %><span class="badge rounded-pill bg-primary text-bg-sucess fs-6 justify-content-end"><%= article.category.title %></span></h3>
+                    
+                </div>
+                <div class="card-body d-flex justify-content-center">
+                    <a href="/<%= article.slug %>" class="btn btn-md bg-primary text-light ">Acessar artigo</a>
+                </div>
+            </div>
+        <%}) %>
+        
+        
     </div>
     
 </body>
