--- a/views/partials/homenavbar.ejs
+++ b/views/partials/homenavbar.ejs
@@ -1,15 +1,15 @@
 <nav class="navbar navbar-dark navbar-expand-lg bg-dark">
     <div class="container-fluid ">
-        <a class="navbar-brand" href="/">GuiaPress</a>
+        <a class="navbar-brand" href="/">.Devlog</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-            </li>
-            <li class="nav-item">
-            </li>
+            <% categories.forEach((category) =>{%>
+                <li class="nav-item">
+                    <a href="/category/<%= category.slug %>" class="nav-link"><%= category.title %></a></li>
+            <% })%>
         </ul>
         </div>
     </div>
