--- a/views/admin/articles/index.ejs
+++ b/views/admin/articles/index.ejs
@@ -4,7 +4,7 @@
     <div class="card mt-4">
         <div class="card-header d-flex justify-content-between">
             <h2>Articles</h2>
-            <a href="/admin/articles/new" class="btn btn-lg btn-primary">Criar Artigo</a>
+            <a href="/admin/articles/new" class="btn btn-lg btn-primary">Create article</a>
         </div>
         <div class="card-body">
             <table class="table table-bordered">
@@ -28,10 +28,10 @@
                     <th><%= articles.slug %></th>
                     <th><%= articles.createdAt.toLocaleString('pt-br', {day: 'numeric', month: 'long', year: 'numeric',hour: "numeric", minute: "numeric", second : "numeric"})%></th>
                     <th>
-                        <a class="btn btn-sm btn-warning" href="/admin/articles/edit/<%= articles.id%>">Editar</a>
+                        <a class="btn btn-sm btn-warning" href="/admin/articles/edit/<%= articles.id%>">Edit</a>
                         <form action="/articles/delete" method="POST" class="d-inline" onsubmit="SubmitModal(event, this)">
                             <input type="hidden" name="id" value="<%= articles.id%>">
-                            <button class="btn btn-sm btn-danger">Excluir</button>
+                            <button class="btn btn-sm btn-danger">Delete</button>
                         </form>
                     </th>
                 </tr>
