--- a/views/admin/categories/edit.ejs
+++ b/views/admin/categories/edit.ejs
@@ -3,13 +3,13 @@
 <div class="container mt-4">
     <div class="card">
         <div class="card-header">
-            <h2>Edição de Categoria</h2>
+            <h2>Category change</h2>
         </div>
         <div class="card-body">
             <form method="post" action="/categories/update" >
                 <input type="hidden" name="id" value="<%= category.id %>">
                 <input class="form-control mb-3" type="text" name="title" value="<%= category.title %>">
-                <button class="btn btn-lg bg-dark text-light">Atualizar</button>
+                <button class="btn btn-lg bg-dark text-light">Update</button>
             </form>
         </div>
     </div>
