--- a/views/admin/categories/new.ejs
+++ b/views/admin/categories/new.ejs
@@ -3,12 +3,12 @@
 <div class="container mt-4">
     <div class="card">
         <div class="card-header">
-            <h2>Cadastro de Categoria</h2>
+            <h2>Category creation</h2>
         </div>
         <div class="card-body">
             <form method="post" action="/categories/save" >
-                <input class="form-control mb-3" type="text" name="title" placeholder="Defina a categoria...">
-                <button class="btn btn-lg bg-dark text-light">Cadastrar</button>
+                <input class="form-control mb-3" type="text" name="title" placeholder="Defina a categoria..." required>
+                <button class="btn btn-lg bg-dark text-light">Create</button>
             </form>
         </div>
     </div>
