--- a/views/article.ejs
+++ b/views/article.ejs
@@ -6,7 +6,7 @@
                 <div class="card-header">
                     <h3 class=" d-flex justify-content-between align-items-center"><%= article.title %></h3>
                 </div>
-                <div class="card-body d-flex justify-content-center">
+                <div class="card-body">
                     <%- article.body %>
                 </div>
             </div>
