--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,11 +11,17 @@
         <% articles.forEach( (article) =>{%>
             <div class="card mb-2">
                 <div class="card-header">
+                    <% if(article.category){ %>
                     <h3 class=" d-flex justify-content-between align-items-center"><%= article.title %><span class="badge rounded-pill bg-primary text-bg-sucess fs-6 justify-content-end"><%= article.category.title %></span></h3>
-                    
+                    <%} else {%>
+                        <h3 class=" d-flex justify-content-between align-items-center"><%= article.title %></h3>
+                    <% }%>
                 </div>
-                <div class="card-body d-flex justify-content-center">
-                    <a href="/<%= article.slug %>" class="btn btn-md bg-primary text-light ">Learn more</a>
+                <div class="card-body">
+                    <img src="" alt="">
+                </div>
+                <div class="card-footer d-flex justify-content-center">
+                    <a href="/<%= article.slug %>" class="btn text-primary ">Learn more</a>
                 </div>
             </div>
         <%}) %>
