--- a/views/page.ejs
+++ b/views/page.ejs
@@ -14,8 +14,11 @@
                     <h3 class=" d-flex justify-content-between align-items-center"><%= article.title %><span class="badge rounded-pill bg-primary text-bg-sucess fs-6 justify-content-end"><%= article.category.title %></span></h3>
                     
                 </div>
-                <div class="card-body d-flex justify-content-center">
-                    <a href="/<%= article.slug %>" class="btn btn-md bg-primary text-light ">Learn more</a>
+                <div class="card-body">
+                    <img src="" alt="">
+                </div>
+                <div class="card-footer d-flex justify-content-center">
+                    <a href="/<%= article.slug %>" class="btn btn-md text-primary ">Learn more</a>
                 </div>
             </div>
         <%}) %>
