--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -13,6 +13,11 @@
             <a class="nav-link active " aria-current="page" href="/admin/articles">Articles</a>
         </li>
     </ul>
+    <ul class="navbar-nav ml-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+            <a class="nav-link active " aria-current="page" href="/logout">Logout</a>
+        </li>
+    </ul>
     </div>
 </div>
 </nav>
